--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,8 @@
 <head>
     <a href="{{ url_for('add_student') }}" class="btn btn-primary">Add Student</a>
     <a href="{{ url_for('add_quiz') }}" class="btn btn-primary">Add Quiz</a>
+    <a href="{{ url_for('add_quiz_result') }}">Add Quiz Result</a>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
